PyMaker/datas/object2/RawHTML/i8101/Python_DOC_referPages.python-invalid-syntax-with-async-def.txt
<div class="post-text" itemprop="text">
<p>I am trying write discord bots using Python, I have come across and threw together this bot.</p>
<pre><code>import discord
import asyncio
import random

client = discord.Client()
inEmail = input("Email:")
inPassword = input("Passwd:")

async def background_loop():
    await client.wait_until_ready()
    while not client.is_closed:
        channel = client.get_channel("************")
        messages = ["Hello!", "How are you doing?", "Testing!!"]
        await client.send_message(channel, random.choice(messages))
        await asyncio.sleep(120)

client.loop.create_task(background_loop())
client.run(inEmail, inPassword)
</code></pre>
<p>Yet when I tried to run it, I received a <code>SyntaxError</code>: </p>
<pre><code>File "1.py", line 7
  async def background_loop():
     ^
SyntaxError: invalid syntax
</code></pre>
<p>Why is that? I have never received that before when I tested it.</p>
</div>
<div class="post-text" itemprop="text">
<p><a href="https://www.python.org/dev/peps/pep-3156/" rel="nofollow noreferrer">Asynchronous requests were introduced to Python in v3.3</a>, if you're running Python prior to v3.3 (including v2.X), you'll have to install a newer version of Python.</p>
<hr/>
<p><strong>Only</strong> if you are running Python 3.3: <code>asyncio</code> is not part of the stdlib, <a href="https://pypi.org/project/asyncio/" rel="nofollow noreferrer">you'll need to install it manually from pypi</a>:</p>
<pre><code>pip install asyncio
</code></pre>
<p>The <code>async</code> and <code>await</code> keywords are only <strong>valid for Python 3.5 or newer</strong>. If you're using Python 3.3 or 3.4, you will need to make the following changes to your code:</p>
<ol>
<li>Use the <code>@asyncio.coroutine</code> decorator instead of the <code>async</code> statement:</li>
</ol>
<p></p>
<pre><code>async def func():
    pass

# replace to:

@asyncio.coroutine
def func():
    pass
</code></pre>
<ol start="2">
<li>Use <code>yield from</code> instead of <code>await</code>:</li>
</ol>
<p></p>
<pre><code>await coroutine() 

# replace to:

yield from coroutine()
</code></pre>
<p>Here is an example of what your function need to change into (if you're on 3.3-3.4):</p>
<pre><code>import asyncio

@asyncio.coroutine 
def background_loop():
    yield from client.wait_until_ready()
    while not client.is_closed:
        channel = client.get_channel("************")
        messages = ["Hello!", "How are you doing?", "Testing!!"]
        yield from client.send_message(channel, random.choice(messages))
        yield from asyncio.sleep(120)
</code></pre>
<p>The aforementioned syntax is still supported in newer versions of Python 3, but it is recommended to use <code>await</code> and <code>async</code> if there's no need to support for Python 3.3-3.4. You can refer back to this <a href="https://docs.python.org/3/library/asyncio-task.html" rel="nofollow noreferrer">documentation</a>, here's a short snippet:</p>
<blockquote>
<p>The <code>async def</code> type of coroutine was added in Python 3.5, and is
  recommended if there is no need to support older Python versions.</p>
</blockquote>
<hr/>
<h2>Aside:</h2>
<p><a class="post-tag" href="/questions/tagged/discord.py" rel="tag" title="show questions tagged 'discord.py'">discord.py</a> currently supports 3.4.2-3.6.6, (<strong>It does not support 3.3-3.4.1, 3.7 as of January 2019</strong>). </p>
<p>For developing with discord.py, I suggest using the discord.py rewrite branch:</p>
<p><a class="post-tag" href="/questions/tagged/discord.py-rewrite" rel="tag" title="show questions tagged 'discord.py-rewrite'">discord.py-rewrite</a> supports 3.5.3-3.7.</p>
</div>
<div class="post-text" itemprop="text">
<p>From version 3.7
<code>async</code> and <code>await</code> are reserved keywords</p>
<p>like the error in below image.</p>
<p><a href="https://i.stack.imgur.com/iJDX9.png" rel="nofollow noreferrer"><img alt="enter image description here" src="https://i.stack.imgur.com/iJDX9.png"/></a></p>
<p>Copy and open the path  (without <code>__init__.py</code>).
You will get a list of .py files
<a href="https://i.stack.imgur.com/oXF82.png" rel="nofollow noreferrer"><img alt="enter image description here" src="https://i.stack.imgur.com/oXF82.png"/></a></p>
<p>Rename <code>async.py</code> to <code>_async.py</code> or anything you want, as async is now a reserved keyword with us from version 3.7.</p>
<p>Once renamed, modify the new name everywhere.</p>
<p><strong>*NOTE
Although it is not a permanent solution
but it worked for me in case of the same syntax error
while working with firebase.
Best solution is to go with previous version of Python. i.e version below 3.7.</strong> </p>
</div>
<span class="comment-copy">Using <code>async</code> before a function definition is only valid syntac in Python 3.4 or greater.</span>
<span class="comment-copy">Yes I have been running the script using "python3 1.py"</span>
<span class="comment-copy">I see, so anything above python 3.4 should work? That is really strange since my server changed python versions somehow over night :P</span>
